add lockout logic
