# ApiUsers/Mihaylov.Api.Users.Client/swagger.json
@@ -788,6 +788,9 @@
             "type": "integer",
             "format": "int32",
             "nullable": true
+          },
+          "lockoutOnFailure": {
+            "type": "boolean"
           }
         },
         "additionalProperties": false
@@ -796,6 +799,9 @@
         "type": "object",
         "properties": {
           "succeeded": {
+            "type": "boolean"
+          },
+          "isLockedOut": {
             "type": "boolean"
           },
           "userName": {
